--- a/assets/css/tpb.css
+++ b/assets/css/tpb.css
@@ -281,9 +281,9 @@
 }
 
 .bg-plb {
-    background: linear-gradient(226deg, #0ba5b0, #825cdb);
+    background: linear-gradient(226deg, #f44336, #9c27b0);
 }
 
 .bg-tpb {
-    background: linear-gradient(226deg, #0ba5b0, #825cdb);
+    background: linear-gradient(226deg, #8bc34a, #9c27b0);
 }
