--- a/assets/css/tpb.css
+++ b/assets/css/tpb.css
@@ -281,9 +281,9 @@
 }
 
 .bg-plb {
-    background: linear-gradient(226deg, #f44336, #9c27b0);
+    background: linear-gradient(226deg, #27b8b8, #27b8b8);
 }
 
 .bg-tpb {
-    background: linear-gradient(226deg, #8bc34a, #9c27b0);
+    background: linear-gradient(226deg, #384850, #384850);
 }
