--- a/assets/new.css
+++ b/assets/new.css
@@ -247,7 +247,49 @@ var {
     text-align: center;
 }
 
-.difl_advanced_blurb_26 .df_ab_blurb_button, .difl_advanced_blurb_22 .df_ab_blurb_button, .difl_advanced_blurb_2 .df_ab_blurb_button, .difl_advanced_blurb_6 .df_ab_blurb_button, .difl_advanced_blurb_15 .df_ab_blurb_button, .difl_advanced_blurb_39 .df_ab_blurb_button, .difl_advanced_blurb_42 .df_ab_blurb_button, .difl_advanced_blurb_27 .df_ab_blurb_button, .difl_advanced_blurb_30 .df_ab_blurb_button, .difl_advanced_blurb_41 .df_ab_blurb_button, .difl_advanced_blurb_31 .df_ab_blurb_button, .difl_advanced_blurb_34 .df_ab_blurb_button, .difl_advanced_blurb_24 .df_ab_blurb_button, .difl_advanced_blurb_8 .df_ab_blurb_button, .difl_advanced_blurb_38 .df_ab_blurb_button, .difl_advanced_blurb_17 .df_ab_blurb_button, .difl_advanced_blurb_28 .df_ab_blurb_button, .difl_advanced_blurb_37 .df_ab_blurb_button, .difl_advanced_blurb_36 .df_ab_blurb_button, .difl_advanced_blurb_11 .df_ab_blurb_button, .difl_advanced_blurb_16 .df_ab_blurb_button, .difl_advanced_blurb_35 .df_ab_blurb_button, .difl_advanced_blurb_23 .df_ab_blurb_button, .difl_advanced_blurb_9 .df_ab_blurb_button, .difl_advanced_blurb_3 .df_ab_blurb_button, .difl_advanced_blurb_0 .df_ab_blurb_button, .difl_advanced_blurb_4 .df_ab_blurb_button, .difl_advanced_blurb_14 .df_ab_blurb_button, .difl_advanced_blurb_10 .df_ab_blurb_button, .difl_advanced_blurb_33 .df_ab_blurb_button, .difl_advanced_blurb_7 .df_ab_blurb_button, .difl_advanced_blurb_25 .df_ab_blurb_button, .difl_advanced_blurb_20 .df_ab_blurb_button, .difl_advanced_blurb_1 .df_ab_blurb_button, .difl_advanced_blurb_29 .df_ab_blurb_button, .difl_advanced_blurb_18 .df_ab_blurb_button, .difl_advanced_blurb_12 .df_ab_blurb_button, .difl_advanced_blurb_13 .df_ab_blurb_button, .difl_advanced_blurb_40 .df_ab_blurb_button, .difl_advanced_blurb_19 .df_ab_blurb_button, .difl_advanced_blurb_32 .df_ab_blurb_button, .difl_advanced_blurb_21 .df_ab_blurb_button, .difl_advanced_blurb_44 .df_ab_blurb_button {
+.difl_advanced_blurb_26 .df_ab_blurb_button,
+.difl_advanced_blurb_22 .df_ab_blurb_button,
+.difl_advanced_blurb_2 .df_ab_blurb_button,
+.difl_advanced_blurb_6 .df_ab_blurb_button,
+.difl_advanced_blurb_15 .df_ab_blurb_button,
+.difl_advanced_blurb_39 .df_ab_blurb_button,
+.difl_advanced_blurb_42 .df_ab_blurb_button,
+.difl_advanced_blurb_27 .df_ab_blurb_button,
+.difl_advanced_blurb_30 .df_ab_blurb_button,
+.difl_advanced_blurb_41 .df_ab_blurb_button,
+.difl_advanced_blurb_31 .df_ab_blurb_button,
+.difl_advanced_blurb_34 .df_ab_blurb_button,
+.difl_advanced_blurb_24 .df_ab_blurb_button,
+.difl_advanced_blurb_8 .df_ab_blurb_button,
+.difl_advanced_blurb_38 .df_ab_blurb_button,
+.difl_advanced_blurb_17 .df_ab_blurb_button,
+.difl_advanced_blurb_28 .df_ab_blurb_button,
+.difl_advanced_blurb_37 .df_ab_blurb_button,
+.difl_advanced_blurb_36 .df_ab_blurb_button,
+.difl_advanced_blurb_11 .df_ab_blurb_button,
+.difl_advanced_blurb_16 .df_ab_blurb_button,
+.difl_advanced_blurb_35 .df_ab_blurb_button,
+.difl_advanced_blurb_23 .df_ab_blurb_button,
+.difl_advanced_blurb_9 .df_ab_blurb_button,
+.difl_advanced_blurb_3 .df_ab_blurb_button,
+.difl_advanced_blurb_0 .df_ab_blurb_button,
+.difl_advanced_blurb_4 .df_ab_blurb_button,
+.difl_advanced_blurb_14 .df_ab_blurb_button,
+.difl_advanced_blurb_10 .df_ab_blurb_button,
+.difl_advanced_blurb_33 .df_ab_blurb_button,
+.difl_advanced_blurb_7 .df_ab_blurb_button,
+.difl_advanced_blurb_25 .df_ab_blurb_button,
+.difl_advanced_blurb_20 .df_ab_blurb_button,
+.difl_advanced_blurb_1 .df_ab_blurb_button,
+.difl_advanced_blurb_29 .df_ab_blurb_button,
+.difl_advanced_blurb_18 .df_ab_blurb_button,
+.difl_advanced_blurb_12 .df_ab_blurb_button,
+.difl_advanced_blurb_13 .df_ab_blurb_button,
+.difl_advanced_blurb_40 .df_ab_blurb_button,
+.difl_advanced_blurb_19 .df_ab_blurb_button,
+.difl_advanced_blurb_32 .df_ab_blurb_button,
+.difl_advanced_blurb_21 .df_ab_blurb_button,
+.difl_advanced_blurb_44 .df_ab_blurb_button {
     border-radius: 4px 4px 4px 4px;
     overflow: hidden;
     border-width: 2px;
